<resources>
    <string name="app_name">NatureBlitz</string>
    <string name="getStarted">Get Started</string>
    <string name="logo">logoSplash</string>
    <string name="login">Login</string>
    <string name="questionReg">Don\'t have an account yet?</string>
    <string name="questionLogin">Already have an account?</string>
    <string name="questionForgotPw">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <drawable name="visiblePassword">visible password</drawable>
    <string name="menu">Menu</string>
    <string name="coin">Coin</string>
    <string-array name="profiles">Profile</string-array>
    <string name="totalCoins">Total Coins</string>
    <string name="user">Get Username</string>
    <string name="welcome">Welcome,</string>
</resources>