<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgreen"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="215dp"
        android:layout_height="143dp"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#E7F09B"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:elevation="30dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:padding="15dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/darkgreen"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:hint="@string/username"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/darkgreen"
                android:textColorHighlight="@color/yellow"
                android:textColorHint="#777777"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/yellow"
                android:textColorHint="#777777"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:autofillHints=""
                android:inputType="text|textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/yellow"
                android:textColorHint="#777777"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnRegister1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:hapticFeedbackEnabled="true"
                android:text="@string/register"
                android:textColor="@color/darkgreen"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textViewWithAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionLogin" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/login"
                android:textColor="@color/darkgreen"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>