<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginBottom="599dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/menuBtn"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:contentDescription="@string/menu"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/main_menu"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="75dp"
        android:layout_height="83dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/logo"
        android:cropToPadding="false"
        app:layout_constraintStart_toEndOf="@+id/menuBtn"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/appNameHome"
        android:layout_width="83dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="#E7F09B"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/coinHome"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/coin"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/appNameHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="31dp"
        android:text="@string/totalCoins"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/coinHome"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ScrollView
        android:layout_width="413dp"
        android:layout_height="578dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/welcome"
                android:textColor="@color/darkgreen"
                android:textSize="24sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/userWelcome"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/user"
                android:textColor="@color/darkgreen"
                android:textSize="24sp" />

        </RelativeLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>